[package]
name = "autosshcaler"
description = "Custom Kubernetes autoscaler using SSH and WoL."
version = "0.1.0"
edition = "2021"
authors = [ "Ariel Richtman <git@richtman.au>" ]
keywords = [ "kubernetes", "autoscaler", "k8s", "api" ]
categories = [ "virtualization" ]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/arichtman/autosshcaler.git"
homepage = "https://github.com/arichtman/autosshcaler.git"

[lib]
name = "autosshcale_rs"
path = "src/lib.rs"
doc = false

[[bin]]
name = "autosshcaler"
path = "src/main.rs"
required-features = ["bin"]

[features]
bin = ["dep:clap"]

[dependencies]
clap = { version = "4.4.10", features = ["derive", "env"], optional = true }
log = "0.4.20"
prost = "0.12.3"
prost-types = "0.12.3"
simple_logger = "4.3.0"
wol-rs = "1.0.1"

[build-dependencies]
prost-build = "0.12.3"
