[package]
name = "autosshcaler"
description = "Custom Kubernetes autoscaler using SSH and WoL."
version = "0.1.0"
edition = "2021"
authors = [ "Ariel Richtman <git@richtman.au>" ]
keywords = [ "kubernetes", "autoscaler", "k8s", "api" ]
categories = [ "virtualization" ]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/arichtman/autosshcaler.git"
homepage = "https://github.com/arichtman/autosshcaler.git"

[lib]
name = "autosshcale_rs"
path = "src/lib.rs"
doc = false

[[bin]]
name = "autosshcaler"
path = "src/main.rs"
required-features = ["bin"]

[features]
bin = ["dep:clap"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive", "env"], optional = true }
log = "0.4.20"
prost = "0.12.3"
prost-types = "0.12.3"
russh = "0.39.0"
russh-keys = "0.38.0"
simple_logger = "4.3.0"
tokio = { version = "1.34.0", features = ["io-util"] }
wol-rs = "1.0.1"

[build-dependencies]
prost-build = "0.12.3"
